--- a/pokemon-battles-react/package.json
+++ b/pokemon-battles-react/package.json
@@ -12,6 +12,7 @@
     "firebase": "^9.6.4",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.1",
+    "react-bootstrap-range-slider": "^3.0.3",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
