--- a/pokemon-battles-react/package.json
+++ b/pokemon-battles-react/package.json
@@ -2,10 +2,12 @@
   "name": "pokemon-battles-react",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3001",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "@xstate/react": "^2.0.1",
     "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
     "express": "^4.17.2",
@@ -16,7 +18,8 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xstate": "^4.30.6"
   },
   "scripts": {
     "start": "react-scripts start",
