--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@xstate/react": "^2.0.1",
     "body-parser": "^1.19.2",
-    "express": "^4.17.3"
+    "cors": "^2.8.5",
+    "express": "^4.17.3",
+    "xstate": "^4.30.6"
   }
 }
