--- a/pokemon-battles-react/package.json
+++ b/pokemon-battles-react/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^5.1.3",
     "express": "^4.17.2",
     "firebase": "^9.6.10",
+    "nodemon": "^2.0.15",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.1",
     "react-bootstrap-range-slider": "^3.0.3",
