--- a/pokemon-battles-react/package.json
+++ b/pokemon-battles-react/package.json
@@ -9,12 +9,14 @@
     "@xstate/react": "^2.0.1",
     "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
+    "chart.js": "^3.7.1",
     "express": "^4.17.2",
     "firebase": "^9.6.10",
     "nodemon": "^2.0.15",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.1",
     "react-bootstrap-range-slider": "^3.0.3",
+    "react-chartjs-2": "^4.0.1",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
